--- a/app/views/pages/homeadm.ejs
+++ b/app/views/pages/homeadm.ejs
@@ -89,7 +89,7 @@
                   Denúncias
                 </li>
                 <li>
-                  <a href="/perfilpremium"><img src="imagens/planos premium.svg" class="icones" alt="Premium"></a>
+                  <a href="/perfilpremium"><img src="imagens/estrela_icon_adm.svg" class="icones" alt="Premium"></a>
                   Perfil Premium
                 </li>
                 <li>
