--- a/app/views/pages/homevendedor.ejs
+++ b/app/views/pages/homevendedor.ejs
@@ -6,6 +6,7 @@
   <title>Vintélo</title>
   <link rel="stylesheet" href="css/estilo.css">
   <link rel="stylesheet" href="css/estilo2.css">
+  <link rel="stylesheet" href="css/product-fonts.css">
   <link rel="icon" href="/imagens/brilhoescuro.png" type="image/x-icon">
 </head>
 
@@ -464,7 +465,6 @@
 
     <!-- Seção de conteúdo principal -->
     <section class="content-section">
-
       <section class="title">
         <p>A tendência é:</p>
         <h1>Sweet Colors</h1>
