--- a/app/views/pages/perfilbrecho.ejs
+++ b/app/views/pages/perfilbrecho.ejs
@@ -76,7 +76,7 @@
                 
                 <section class="profile-actions">
                     <button class="follow-btn" onclick="toggleFollowBrecho(this, <%= brecho.ID_USUARIO %>)">Seguir</button>
-                    <a href="/avaliasao"><button class="reviews-btn">Ver avaliações</button></a>
+                    <a href="/brecho/<%= brecho.ID_USUARIO %>/avaliacoes"><button class="reviews-btn">Ver avaliações</button></a>
                 </section>
                 
                 <p class="bio">
