--- a/app/views/pages/adicionar.ejs
+++ b/app/views/pages/adicionar.ejs
@@ -41,7 +41,7 @@
     <section class="mobile-header">
         <header>
             <nav class="grid">
-                <a href="/homevendedor">
+                <a href="javascript:void(0)" id="goBackBtn">
                     <img src="imagens/seta.png" alt="Voltar">
                 </a>
                 <img src="imagens/logo.png" alt="Vintélo">
