--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Vintélo</title>
   <link rel="stylesheet" href="css/estilo.css">
+  <link rel="stylesheet" href="css/product-fonts.css">
   <link rel="icon" href="/imagens/brilhoescuro.png" type="image/x-icon">
   <meta name="description" content="Descubra peças únicas em brechós online. Moda sustentável, preços acessíveis e estilo autêntico na Vintélo.">
   <link rel="preload" href="js/app.js" as="script">
