--- a/app/views/pages/homecomprador.ejs
+++ b/app/views/pages/homecomprador.ejs
@@ -65,7 +65,7 @@
             <li>
               <a href="/criarbrecho">
                 <section class="profile-section">
-                  <img src="<%= autenticado && autenticado.imagem ? '/' + autenticado.imagem : '/imagens/icone sem cadastro.png' % alt="Perfil" class="profile-pic maria">" alt="Perfil" class="profile-pic">
+                  <img src="<%= autenticado && autenticado.imagem ? '/' + autenticado.imagem : '/imagens/icone sem cadastro.png' %>" alt="Perfil" class="profile-pic maria">
                   <section class="profile-info">
                     <h2><%= autenticado && autenticado.nome ? autenticado.nome : 'Usuário' %></h2>
                   </section>
@@ -109,7 +109,7 @@
         <img src="/imagens/logo.png" class="logo">
         <a href="/menu">
           <div class="profile-container">
-            <img src="<%= autenticado && autenticado.imagem ? '/' + autenticado.imagem : '/imagens/icone sem cadastro.png' % alt="Foto de perfil" class="profile-pic maria" />" alt="Foto de perfil" class="profile-pic" />
+            <img src="<%= autenticado && autenticado.imagem ? '/' + autenticado.imagem : '/imagens/icone sem cadastro.png' %>" alt="Foto de perfil" class="profile-pic maria" />
           </div>
         </a>
       </nav>
