--- a/app/views/pages/avaliacoes-brecho.ejs
+++ b/app/views/pages/avaliacoes-brecho.ejs
@@ -81,11 +81,7 @@
             <% } %>
         </section>
     </main>
-
-    <script>
-        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
-        window.brechoId = <%= brecho.ID_USUARIO %>;
-    </script>
+    <script src="/js/perfil-autenticado.js"></script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/avaliacoes-brecho.js"></script>
 </body>
